[package]
name = "realm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.21"
colored = "2.0.0"
enum-other = "0.1.0"
fern = "0.6.1"
futures = "0.3.21"
gethostname = "0.2.3"
hex = "0.4.3"
insta = "1.18.2"
log = "0.4.17"
logos = "0.12.1"
num-traits = "0.2.15"
paste = "1.0.8"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.143", features = ["derive"] }
serde_default = "0.1.0"
serde_with = { version = "2.0.0", features = ["hex"] }
serde_yaml = "0.9"
siphasher = "0.3.10"
test-case = "2.2.1"
tokio = { version = "1.20.1", features = ["full"] }
